# avito-parser

./: .gitignore  Main.css  Main2.0.html  README  README.md  ads.csv  main.html  main.py  package-lock.json  package.json  pyproject.toml  requarments.txt  settings.py  view.py
Web/: Main.css  Main2.0.html
app/: auth.py  change.py  forms.py  front.py  get.py  mailing.py  main.js  main.py  methods.py  models.py  package-lock.json  settings.py  test.py  threads.py  upload_city_id.py  view.py
auth/: vk.py
csv/: Supra_ads.csv  ads.csv  parsers.csv  test1_ads.csv  Ёсикава_ads.csv
data/: database.db  private.pem  public.pem
db/: private.pem  public.pem
front/: README.md  auth.py  change.py  get.py
public/: index.html
src/: index.js
src/css/: App.css  Main.css  Menu.css  Scroll.css
src/js/: App.js  eel.js  heel.js
src/js/Async/: asyncActions.js
src/js/Main/: Main.js
src/js/Main/Templates/: Ad.js  AdInfo.js  MainBlock.js  Support-1.js  Support-2.js
src/js/Menu/: Menu.js
src/js/Menu/Buttons/: CreateFinder.js  Favorite.js  MenuButtons.js  Profile.js  Settings.js  СreateParser.js
templates/: Main.css  main.html  test.html  vk_auth.html  white.html
templates/Боль/: 1st page.html  index.html  style.css
templates/Боль/новая история/: Main.html  script.js
