[tool.poetry]
name = "avito-parser"
version = "0.1.0"
description = ""
authors = ["Tim <71645120+TimurStorm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "1.4.4"
beautifulsoup4 = "4.9.3"
bottle = "0.12.19"
bottle-websocket = "0.2.9"
bs4 = "0.0.1"
CacheControl = "0.12.6"
cachy = "0.3.0"
certifi = "2020.12.5'
cffi = "1.14.5"
chardet = "4.0.0"
cleo = "0.8.1"
clikit = "0.6.2"
crashtest = "0.3.1"
distlib = "0.3.1"
Eel = "0.14.0"
filelock = "3.0.12"
future = "0.18.2"
gevent = "21.1.2"
gevent-websocket= "0.10.1"
greenlet= "1.0.0"
html5lib= "1.1"
idna= "2.10"
keyring= "21.8.0"
lockfile= "0.12.2"
lxml = "4.6.2"
msgpack= "1.0.2"
packaging= "20.9"
pastel= "0.2.1"
pexpect= "4.8.0"
pkginfo= "1.7.0"
poetry= "1.1.4"
poetry-core= "1.0.2"
ptyprocess= "0.7.0"
pycparser= "2.20"
pylev= "1.3.0"
pyparsing= "2.4.7"
pywin32-ctypes= "0.2.0"
requests= "2.25.1"
requests-toolbelt= "0.9.1"
shellingham= "1.4.0"
six= "1.15.0"
soupsieve= "2.2"
tomlkit= "0.7.0"
urllib3= "1.26.3"
virtualenv="20.4.2"
vk-api="11.9.1"
webencodings="0.5.1"
whichcraft="0.6.1"
zope.event="4.5.0"
zope.interface="5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
