[tool.poetry]
name = "avito-parser"
version = "0.1.0"
description = ""
authors = ["Tim <71645120+TimurStorm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Eel = "^0.14.0"
vk-api = "^11.9.1"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.2"
black = "^20.8b1"
Jinja2 = "^2.11.3"
pyinstaller = "^4.2"
rsa = "^4.7.2"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
bcrypt = "^3.2.0"
keyring = "^23.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
